# lenticular-uv-printing

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: plan1.md
src/: app.css  main.ts
src/core/: calibrate.ts  depth.ts  geom.ts  interlace.ts  profiles.ts  spec.ts
src/lenticular_raster/: __init__.py  cli.py  core.py  image_io.py  web.py  web_runner.py
src/lenticular_raster/static/: app.css
src/lenticular_raster/templates/: index.html  preview.html
src/png/: crc32.ts  encode.ts
src/types/: pica.d.ts
src/ui/: forms.ts  labels.ts  render.ts  resample.ts
src/ui/i18n/: en.ts  index.ts  zh.ts
tests/: calibrate.test.ts  depth.test.ts  geom.test.ts  i18n.test.ts  interlace.test.ts  png.test.ts  profiles.test.ts  sanity.fixture.test.ts  spec.test.ts  test_cli.py  test_core.py  test_web.py
