[project]
name = "lenticular-raster"
version = "0.1.0"
description = "Generate lenticular interlaced images and UV gloss depth maps for raster lenticular printing."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "numpy>=1.26",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
]

[project.scripts]
lenticular-raster = "lenticular_raster.cli:main"
lenticular-raster-web = "lenticular_raster.web_runner:main"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/lenticular_raster"]
